fixed a bug with the translate in the content wrapper clipping a portion of the image and the description box

--- a/css/card.css
+++ b/css/card.css
@@ -28,11 +28,11 @@ header {
     font-weight: 700;
     background: #000000;
     color: #6e7000;
-    padding: 1rem 0;
+    /* padding: 1rem 0; */
     text-align: center;
     font-size: x-large;
-    padding: 2px 0;
-    margin-top: -10px;
+    /* padding: 2px 0; */
+    /* margin-top: -10px; */
 }
 header nav ul {
     text-align: center;
@@ -68,11 +68,10 @@ footer p{
     display: flex;
     overflow-x: auto;
     overflow-y: auto;
-    padding-bottom: 600px;
+    /* padding-bottom: 600px; */
     box-sizing: border-box;
     width: 100%;
     height: calc(100vh - 65px);
-    transform: translateY(10PX);
 }
 
 .content-wrapper::-webkit-scrollbar {
